nxMyDB v0.3.0 (not released):

nxMyDB v0.2.0 (Sep 25, 2007):
  NEW: Event handler for catching server start and stop events.
  NEW: Full user and group synchronization during start-up.
  NEW: Incremental user and group synchronization performed on configurable intervals.
  NEW: Three new configuration options: Sync, SyncFirst, and SyncInterval.
  NEW: Two new tables for keeping track of changes made to users and groups.
  CHG: Removed the "Refresh" configuration option, see the new sync options.
  CHG: Renamed io_users and io_group tables to io_user and io_group, respectively.
  CHG: The "updated" column will only be set on writes.
  FIX: Corrected a few possible memory leaks in failure scenarios.

nxMyDB v0.1.0 (Sep 8, 2007):
  CHG: Initial release.