@@ -1,4 +1,6 @@
 nxMyDB v0.3.0 (not released):
+  CHG: Renamed configuration option "SyncFirst" to "Sync_First".
+  CHG: Renamed configuration option "SyncInterval" to "Sync_Interval".
 
 nxMyDB v0.2.0 (Sep 25, 2007):
   NEW: Event handler for catching server start and stop events.
